[project]
name = "stt-server"
version = "0.1.0"
description = "OpenAI-compatible STT server supporting Whisper and FunASR"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "numpy",
]

[project.optional-dependencies]
cuda = [
    "faster-whisper>=1.0.3",
    "funasr>=1.1.0",
    "torch>=2.2",
    "torchaudio>=2.2",
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
]
mlx = [
    "mlx-whisper>=0.4.0",
]

[tool.uv]
package = false
